removed view transition

--- a/src/components/FluidEffect.astro
+++ b/src/components/FluidEffect.astro
@@ -11,7 +11,7 @@
   }
 </style>
 <script lang="js">
-  document.addEventListener('astro:page-load', () => {
+  document.addEventListener('DOMContentLoaded', () => {
     initFluid();
   });
 
