--- a/src/components/GalleryHero.astro
+++ b/src/components/GalleryHero.astro
@@ -67,7 +67,7 @@
 
 <script>
   import Parallax from 'parallax-js';
-  document.addEventListener('astro:page-load', () => {
+  document.addEventListener('DOMContentLoaded', () => {
     const scene = document.getElementById('scene') as HTMLDivElement;
     new Parallax(scene);
   });
