--- a/src/components/landing/Events.astro
+++ b/src/components/landing/Events.astro
@@ -99,7 +99,7 @@ const cards = [
 </style>
 
 <script>
-  document.addEventListener('astro:page-load', () => {
+  document.addEventListener('DOMContentLoaded', () => {
     gsap.registerPlugin(ScrollTrigger);
     const start1X = -250;
     const end1X = -10;
