--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Benifits from '@components/landing/Benifits.astro';
     <!-- video -->
     <section class="content-container grid place-content-center py-20 h-fit">
       <video class="m-auto w-full h-fit rounded-3xl" muted autoplay loop>
-        <source src="/intro-video.mp4" type="video/mp4" />
+        <source src="/acelogointro.mp4" type="video/mp4" />
       </video>
     </section>
 
