--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -29,7 +29,7 @@ const teamMembers = {
   { name: 'Rohan MP', position: 'Technical Coordinator', image: '/images/team/ABI03974.jpg' },
   { name: 'Satwik Prabhu', position: 'Techincal Coordinator', image: '/images/team/ABI03897.jpg' },
   { name: 'Len Mendonca', position: 'Joint Technical Coordinator', image: '/images/team/ABI04492.jpg' },
-  { name: 'Varun Pai', position: 'Joint Technical Coordinator', image: '/images/team/ABI04447.jpg' },
+  { name: 'Varun Pai', position: 'Joint Technical Coordinator', image: '/images/team/varunpai.jpeg' },
   { name: 'Omkar', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04469.jpg' },
   { name: 'Pratham Nayak', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04475.jpg' },
   { name: 'Akhil Manoj', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04467.jpg' },
