--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -87,7 +87,7 @@ const teamMembers = {
           {members.map((member) => (
             <div class="card" key={member.name}>
               <div class="imgBx">
-                <img src={member.image} alt={member.name} />
+                <img src={member.image} alt={member.name} loading="lazy"/>
               </div>
               <div class="content">
                 <div class="contentBx">
