reduced image size --- x dilshan

--- a/src/pages/team.astro
+++ b/src/pages/team.astro
@@ -4,46 +4,46 @@ import { faculty } from '@lib/constants';
 
 const teamMembers = {
   2023: [
-  { name: 'Vasudha G', position: 'President', image: '/images/team/President.jpg' },
-  { name: 'Keerthan Samuel Jathannna', position: 'Branch Captian', image: '/images/team/ABI03955.jpg' },
-  { name: 'Saurabh Sunish', position: 'Vice President', image: '/images/team/ABI03875.jpg' },
-  { name: 'Tvisha Prakash', position: 'Branch Secretary', image: '/images/team/ABI03882.jpg' },
-  { name: 'Shannon Vianny Vas', position: 'Treasurer', image: '/images/team/ABI03877.jpg' },
-  { name: 'Lisha Anni Rodrigues', position: 'Joint Secretary', image: '/images/team/lisha.jpg' },
-  { name: 'Driksha Hegde', position: 'Social Event Coordinator', image: '/images/team/ABI04166.jpg' },
-  {name: 'Kritharth', position: 'Social Event Coordinator', image: '/images/team/ABI03894.jpg' },
-  { name: 'Sanjana R Shet', position: 'Cultural Secretary', image: '/images/team/ABI03900.jpg' },
-  { name: 'Ananya', position: 'Cultural Secretary', image: '/images/team/ABI04159.jpg' },
-  { name: 'Pearl Menezes', position: 'Magazine Coordinator', image: '/images/team/ABI04162.jpg' },
-  { name: 'Siya Shetty', position: 'Magazine Coordinator', image: '/images/team/ABI03924.jpg' },
-  { name: 'Gahana Shetty', position: 'Magazine Coordinator', image: '/images/team/ABI03891.jpg' },
-  { name: 'Carol Dcunha', position: 'Magazine Coordinator', image: '/images/team/ABI04170.jpg' },
-  { name: 'Navaraj D Shetty', position: 'Sports Coordinator', image: '/images/team/navaraj.jpg' },
-  { name: 'Thashwin Shreevatsa', position: 'Sports Coordinator', image: '/images/team/thaswin.jpg' },
-  { name: 'Chirag B S', position: 'Graphic Design Coordinator', image: '/images/team/ABI03908.jpg' },
-  { name: 'Srilaxmi Bhagawath', position: 'Graphic Design Coordinator', image: '/images/team/ABI04135.jpg' },
-  { name: 'Preethika Shet', position: 'Social Media Coordinator', image: '/images/team/ABI04132.jpg' },
-  { name: 'Anaksha N A', position: 'Social Media Coordinator', image: '/images/team/ABI03903.jpg' },
-  { name: 'Prathamesh Hebbar', position: 'Joint Social Media Coordinator', image: '/images/team/pratamesh.jpg' },
-  { name: 'Sagar Kotian', position: 'Joint-Social Media Coordinator', image: '/images/team/ABI04477.jpg' },
-  { name: 'Rohan MP', position: 'Technical Coordinator', image: '/images/team/ABI03974.jpg' },
-  { name: 'Satwik Prabhu', position: 'Techincal Coordinator', image: '/images/team/ABI03897.jpg' },
-  { name: 'Len Mendonca', position: 'Joint Technical Coordinator', image: '/images/team/ABI04492.jpg' },
-  { name: 'Varun Pai', position: 'Joint Technical Coordinator', image: '/images/team/varunpai.jpeg' },
-  { name: 'Omkar', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04469.jpg' },
-  { name: 'Pratham Nayak', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04475.jpg' },
-  { name: 'Akhil Manoj', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04467.jpg' },
-  { name: 'Harshit D Shettigar', position: 'Joint Cultural Coordinator', image: '/images/team/ABI04436.jpg' },
-  { name: 'Sanjana Santhosh Gunaga', position: 'Joint Cultural Coordinator', image: '/images/team/ABI04440.jpg' },
-  { name: 'Pratheek A Shetty', position: 'Joint Sports Coordinator', image: '/images/team/ABI04456.jpg' },
-  { name: 'Siona Angela Rodrigues', position: 'Joint Sports Coordinator', image: '/images/team/ABI04452.jpg' },
-  { name: 'N Liya Nanaiah', position: 'Joint Magazine Coordinator', image: '/images/team/ABI04504.jpg' },
-  { name: 'Sujan Amin', position: 'Joint Social Event Coordinator', image: '/images/team/ABI04462.jpg' },
-  { name: 'Sakshi Sujit Shetty', position: 'Joint Social Event Coordinator', image: '/images/team/ABI04459.jpg' },
-  { name: 'Kaniel Bion Almeida', position: 'Photography & Video Coordinator', image: '/images/team/ABI04141.jpg' },
-  { name: 'S Abishek', position: 'Photography & Video Coordinator', image: '/images/team/ABI03962.jpg' },
-  { name: 'Athul N Rao', position: 'Joint Photography & Video Coordinator', image: '/images/team/ABI04489.jpg' },
-  { name: 'B Gautam Mohan', position: 'Joint Photography & Video Coordinator', image: '/images/team/ABI04484.jpg' },
+  { name: 'Vasudha G', position: 'President', image: '/images/team/President-min.jpg' },
+  { name: 'Keerthan Samuel Jathannna', position: 'Branch Captian', image: '/images/team/ABI03955-min.jpg' },
+  { name: 'Saurabh Sunish', position: 'Vice President', image: '/images/team/ABI03875-min.jpg' },
+  { name: 'Tvisha Prakash', position: 'Branch Secretary', image: '/images/team/ABI03882-min.jpg' },
+  { name: 'Shannon Vianny Vas', position: 'Treasurer', image: '/images/team/ABI03877-min.jpg' },
+  { name: 'Lisha Anni Rodrigues', position: 'Joint Secretary', image: '/images/team/lisha-min.jpg' },
+  { name: 'Driksha Hegde', position: 'Social Event Coordinator', image: '/images/team/ABI04166-min.jpg' },
+  {name: 'Kritharth', position: 'Social Event Coordinator', image: '/images/team/ABI03894-min.jpg' },
+  { name: 'Sanjana R Shet', position: 'Cultural Secretary', image: '/images/team/ABI03900-min.jpg' },
+  { name: 'Ananya', position: 'Cultural Secretary', image: '/images/team/ABI04159-min.jpg' },
+  { name: 'Pearl Menezes', position: 'Magazine Coordinator', image: '/images/team/ABI04162-min.jpg' },
+  { name: 'Siya Shetty', position: 'Magazine Coordinator', image: '/images/team/ABI03924-min.jpg' },
+  { name: 'Gahana Shetty', position: 'Magazine Coordinator', image: '/images/team/ABI03891-min.jpg' },
+  { name: 'Carol Dcunha', position: 'Magazine Coordinator', image: '/images/team/ABI04170-min.jpg' },
+  { name: 'Navaraj D Shetty', position: 'Sports Coordinator', image: '/images/team/navaraj-min.jpg' },
+  { name: 'Thashwin Shreevatsa', position: 'Sports Coordinator', image: '/images/team/thaswin-min.jpg' },
+  { name: 'Chirag B S', position: 'Graphic Design Coordinator', image: '/images/team/ABI03908-min.jpg' },
+  { name: 'Srilaxmi Bhagawath', position: 'Graphic Design Coordinator', image: '/images/team/ABI04135-min.jpg' },
+  { name: 'Preethika Shet', position: 'Social Media Coordinator', image: '/images/team/ABI04132-min.jpg' },
+  { name: 'Anaksha N A', position: 'Social Media Coordinator', image: '/images/team/ABI03903-min.jpg' },
+  { name: 'Prathamesh Hebbar', position: 'Joint Social Media Coordinator', image: '/images/team/pratamesh-min.jpg' },
+  { name: 'Sagar Kotian', position: 'Joint-Social Media Coordinator', image: '/images/team/ABI04477-min.jpg' },
+  { name: 'Rohan MP', position: 'Technical Coordinator', image: '/images/team/ABI03974-min.jpg' },
+  { name: 'Satwik Prabhu', position: 'Techincal Coordinator', image: '/images/team/ABI03897-min.jpg' },
+  { name: 'Len Mendonca', position: 'Joint Technical Coordinator', image: '/images/team/ABI04492-min.jpg' },
+  { name: 'Varun Pai', position: 'Joint Technical Coordinator', image: '/images/developers/varunpai.jpeg' },
+  { name: 'Omkar', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04469-min.jpg' },
+  { name: 'Pratham Nayak', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04475-min.jpg' },
+  { name: 'Akhil Manoj', position: 'Joint Graphics Design Coordinator', image: '/images/team/ABI04467-min.jpg' },
+  { name: 'Harshit D Shettigar', position: 'Joint Cultural Coordinator', image: '/images/team/ABI04436-min.jpg' },
+  { name: 'Sanjana Santhosh Gunaga', position: 'Joint Cultural Coordinator', image: '/images/team/ABI04440-min.jpg' },
+  { name: 'Pratheek A Shetty', position: 'Joint Sports Coordinator', image: '/images/team/ABI04456-min.jpg' },
+  { name: 'Siona Angela Rodrigues', position: 'Joint Sports Coordinator', image: '/images/team/ABI04452-min.jpg' },
+  { name: 'N Liya Nanaiah', position: 'Joint Magazine Coordinator', image: '/images/team/ABI04504-min.jpg' },
+  { name: 'Sujan Amin', position: 'Joint Social Event Coordinator', image: '/images/team/ABI04462-min.jpg' },
+  { name: 'Sakshi Sujit Shetty', position: 'Joint Social Event Coordinator', image: '/images/team/ABI04459-min.jpg' },
+  { name: 'Kaniel Bion Almeida', position: 'Photography & Video Coordinator', image: '/images/team/ABI04141-min.jpg' },
+  { name: 'S Abishek', position: 'Photography & Video Coordinator', image: '/images/team/ABI03962-min.jpg' },
+  { name: 'Athul N Rao', position: 'Joint Photography & Video Coordinator', image: '/images/team/ABI04489-min.jpg' },
+  { name: 'B Gautam Mohan', position: 'Joint Photography & Video Coordinator', image: '/images/team/ABI04484-min.jpg' },
    
   ],
   2024: [
