--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -29,7 +29,7 @@ import Layout from "@layouts/Layout.astro";
           ...maybe you are the issue not us !! fix your damn system.
         </p>
         <p>
-          And we know the gif is bad 
+          And we know the gif is bad and we are not gona fix it
         </p>
         <a href="/" >
           <button>Back to home </button>
