--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -1,6 +1,10 @@
 ---
+
 import EventCard from '@components/EventCard.astro';
 import Layout from '@layouts/Layout.astro';
+import { getAllEventsForUser } from 'utils/events';
+
+const events = await getAllEventsForUser();
 
 ---
 
@@ -9,10 +13,13 @@ import Layout from '@layouts/Layout.astro';
     <h1 class="text-4xl mb-8 font-dirtyline ">Events</h1>
 
     <div class="grid  sm:gap-y-8 grid-cols-1 gap-y-8 md:grid-cols-2 md:gap-x-32 lg:grid-cols-3">
-      <EventCard />
-      <EventCard  />
-      <EventCard  />
-      <a href="/events/1"><EventCard /></a>
+      {events?.map((event,_)=>(
+        <a href={`/events/${event.id}`}> <EventCard eventName={event.name} venue={event.venue} category={event.category} date={event.fromDate} id={event.id} state={event.state}/></a>
+       
+      )
+
+      )}
+      
     </div>
   </section>
 </Layout>
