Write blog button

--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -118,7 +118,7 @@ const blogs = [
             <p class="mb-6 mt-4 text-gray-400">
               Start writing your blogs here and be a part of the vibrant ACE community!
             </p>
-            <a href="/blogs/edit"> Write a blog ✍🏻</a>
+            <a href="/blogs/new"> Write a blog ✍🏻</a>
           </div>
         </aside>
 
