--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,10 +5,10 @@ import { Icon } from 'astro-icon/components';
 
 <footer class="content-container tracking-wider pt-8 text-center md:text-left mt-20" transition:persist>
   <hr class="my-2" />
-  <div class="flex flex-col flex-wrap md:flex-row md:flex-nowrap md:items-center lg:items-start py-2 mx-14">
+  <div class="flex flex-col flex-wrap md:flex-row md:flex-nowrap md:items-center lg:items-start py-2 mx-4 md:mx-14">
     <div class="m-6 flex flex-grow md:mt-0 md:pl-20">
       <div class="w-full p-4 px-4 md:w-1/2 lg:w-1/2">
-        <div class="flex flex-col gap-4 text-white">
+        <div class="social-links flex flex-col gap-4 text-white">
           <a class="flex gap-4 items-center" href={githubLink} target="_blank">
             <Icon name="mdi:github" size={30} />
             <span>GitHub</span>
@@ -25,23 +25,23 @@ import { Icon } from 'astro-icon/components';
       </div>
     </div>
 
-    <div class="mx-10 flex flex-shrink-0 flex-col gap-2 text-white md:w-1/3 md:items-start">
+    <div class="mx-4 md:mx-10 flex flex-shrink-0 flex-col gap-2 text-white md:w-1/3 md:items-start">
       <b class="pt-4">ACE</b>
       <p>Department of CSE</p>
-      <p class="">NMAM Institute of Technology, Nitte, Karkala Taluk, Udupi-574110 Karnataka, India</p>
+      <p>NMAM Institute of Technology, Nitte, Karkala Taluk, Udupi-574110 Karnataka, India</p>
     </div>
   </div>
   <hr class="my-2" />
-  <div class="text-white flex justify-between my-4 mx-14">
-    <p class="px-5 py-5 text-start">
+  <div class="text-white flex justify-between flex-col md:flex-row my-4 mx-4 md:mx-14">
+    <p class="px-2 md:px-5 py-2 md:py-5 text-center md:text-start">
       ACE © {new Date().getFullYear()}
     </p>
-    <img src="/images/top-button.svg" alt="top" class="" />
+    <img src="/images/top-button.svg" alt="top" class="w-12 md:w-auto mx-auto md:mx-0" />
   </div>
 </footer>
 
 <div class="torch relative w-full h-fit hidden md:block mb-4">
-  <img src="/images/aceweb2.png" alt="" class="object-center torch-img w-auto mx-auto object-fill" />
+  <img src="/images/aceweb2.png" alt="ACE" class="object-center torch-img w-full md:w-auto mx-auto object-fill" />
 </div>
 
 <style>
@@ -69,6 +69,36 @@ import { Icon } from 'astro-icon/components';
       rgba(0, 0, 0, 0) 10px,
       rgba(0, 0, 0, 0) 20px
     );
+  }
+
+  @media (max-width: 768px) {
+    .mx-14 {
+      margin-left: 1rem;
+      margin-right: 1rem;
+    }
+    .md:pl-20 {
+      padding-left: 1rem;
+    }
+    .content-container {
+      padding-top: 4rem;
+    }
+    .torch img {
+      width: 100%;
+    }
+
+    /* Center social links */
+    .social-links {
+      align-items: center;
+    }
+  }
+
+  @media (max-width: 480px) {
+    .text-white {
+      font-size: 0.85rem;
+    }
+    .torch {
+      display: none; /* Hide the torch effect for small screens */
+    }
   }
 </style>
 
