--- a/src/pages/events/[slug].astro
+++ b/src/pages/events/[slug].astro
@@ -1,5 +1,7 @@
 ---
 import Layout from '@layouts/Layout.astro';
+import sample from '../../assets/images/sample.png'
+import { Image } from 'astro:assets'
 ---
 
 <Layout>
@@ -7,7 +9,7 @@ import Layout from '@layouts/Layout.astro';
     <h1 class="title text-6xl text-center mb-4 font-dirtyline">Rise and Shine!</h1>
     <div class="container mx-auto">
       <div class="poster card">
-        <img src="/images/sample.png" alt="Event Poster" class="poster-img" />
+        <Image src={sample} alt="Event Poster" class="poster-img" />
       </div>
 
       <div class="description">
