--- a/src/components/DeveloperCard.astro
+++ b/src/components/DeveloperCard.astro
@@ -1,5 +1,6 @@
 ---
 import { Icon } from 'astro-icon/components';
+import { Image } from 'astro:assets';
 
 type Props = {
   name: string;
@@ -7,8 +8,8 @@ type Props = {
   githubLink: string;
   linkedinLink: string;
   instagramLink: string;
-  frontImage: string;
-  backImage: string;
+  frontImage: ImageMetadata;
+  backImage: ImageMetadata;
 };
 
 const { name, description, githubLink, linkedinLink, instagramLink, frontImage, backImage }: Props = Astro.props;
@@ -18,10 +19,10 @@ const { name, description, githubLink, linkedinLink, instagramLink, frontImage, 
   <div class="scene">
     <div class="card">
       <div class="card__face card__face--front">
-        <img src={frontImage} alt="Front Image" />
+        <Image src={frontImage} alt="Front Image" />
       </div>
       <div class="card__face card__face--back">
-        <img src={backImage} alt="Back Image" />
+        <Image src={backImage} alt="Back Image" />
       </div>
     </div>
   </div>
