--- a/src/components/landing/Gallery.astro
+++ b/src/components/landing/Gallery.astro
@@ -1,36 +1,40 @@
+---
+import { Image } from "astro:assets";
+import sample from '../../assets/images/sample.png'
+---
 <section class="overflow-hidden gallery-parent">
   <div class="gallery-container w-full h-full space-y-4">
     <div class="flex gap-4 h-[75%] m-auto image-row">
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
     </div>
 
     <div class="flex gap-4 h-[75%] m-auto image-row">
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
     </div>
 
     <div class="flex gap-4 h-[75%] m-auto image-row">
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
-      <img src="images/sample.png" alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
+      <Image src={sample} alt="fndf" />
     </div>
   </div>
 </section>
